<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="7dp"
    android:elevation="500dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/noteCardView"
    >

    <RelativeLayout
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:padding="4dp"
        android:background="@drawable/note_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvTitle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/black"
            android:text="@string/title"
            android:maxLines="1"
            />
        <TextView
            android:id="@+id/tvDesc"
            android:textSize="16sp"
            android:layout_below="@+id/tvTitle"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:maxLines="2"
            />
        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:textColor="@color/dateTime"
            android:textAlignment="center"
            android:layout_below="@+id/tvDesc"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>